{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 217,
  "lineage": "a736a468-1492-953e-bbe5-26cd2c9e3ea7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b2754065387b7b1",
            "association_id": "eipassoc-055cf30c4137fd043",
            "domain": "vpc",
            "id": "eipalloc-04b2754065387b7b1",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-03ee3a0dcb0834492",
            "private_dns": "ip-10-0-1-63.ap-south-1.compute.internal",
            "private_ip": "10.0.1.63",
            "public_dns": "ec2-3-6-251-205.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.251.205",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b02eacf129bfac4e",
            "arn": "arn:aws:ec2:ap-south-1:318451290319:instance/i-062ebe8b8ee502ddf",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-062ebe8b8ee502ddf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "redgear",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef6bfa25b4073b63",
            "private_dns": "ip-172-31-0-214.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.0.214",
            "public_dns": "ec2-3-110-209-17.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.209.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01dba4940167f1e4e",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "default"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e55f0f700e907875",
            "tags": {
              "Name": "instance1"
            },
            "tags_all": {
              "Name": "instance1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a222205f59f3ff0"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myInternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:internet-gateway/igw-0b35eb6256ca3c2e1",
            "id": "igw-0b35eb6256ca3c2e1",
            "owner_id": "318451290319",
            "tags": {
              "Name": "myinternetgw"
            },
            "tags_all": {
              "Name": "myinternetgw"
            },
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "LG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:318451290319:targetgroup/terraform-tg/bec158f776a416fa",
            "arn_suffix": "targetgroup/terraform-tg/bec158f776a416fa",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:318451290319:targetgroup/terraform-tg/bec158f776a416fa",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "terraform-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "myNatGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b2754065387b7b1",
            "connectivity_type": "public",
            "id": "nat-07be3b1dfb05087dc",
            "network_interface_id": "eni-03ee3a0dcb0834492",
            "private_ip": "10.0.1.63",
            "public_ip": "3.6.251.205",
            "subnet_id": "subnet-04420961101231315",
            "tags": {
              "Name": "myNatGateway"
            },
            "tags_all": {
              "Name": "myNatGateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:route-table/rtb-0115b8a0fce5c3377",
            "id": "rtb-0115b8a0fce5c3377",
            "owner_id": "318451290319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-07be3b1dfb05087dc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRouteTable"
            },
            "tags_all": {
              "Name": "privateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.myNatGateway",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:route-table/rtb-062f3f74b3c802a36",
            "id": "rtb-062f3f74b3c802a36",
            "owner_id": "318451290319",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b35eb6256ca3c2e1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.myInternetGateway",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forPrivate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05977e2b244a6ea2b",
            "route_table_id": "rtb-0115b8a0fce5c3377",
            "subnet_id": "subnet-00867c391556726c8"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.myNatGateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "forPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0f6e1a09ec2a185",
            "route_table_id": "rtb-062f3f74b3c802a36",
            "subnet_id": "subnet-04420961101231315"
          },
          "dependencies": [
            "aws_internet_gateway.myInternetGateway",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:security-group/sg-05a7dfa67fcd451e6",
            "description": "Public internet access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a7dfa67fcd451e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "my-public-sg",
            "name_prefix": "",
            "owner_id": "318451290319",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my_sg"
            },
            "tags_all": {
              "Name": "my_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2097117033",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05a7dfa67fcd451e6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "public_in_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1010571660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-05a7dfa67fcd451e6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public",
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:subnet/subnet-00867c391556726c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00867c391556726c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318451290319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server1-PrivateSubnet"
            },
            "tags_all": {
              "Name": "server1-PrivateSubnet"
            },
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:subnet/subnet-04420961101231315",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04420961101231315",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "318451290319",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "server1-publicSubnet"
            },
            "tags_all": {
              "Name": "server1-publicSubnet"
            },
            "vpc_id": "vpc-03ca51b08e4c298f8"
          },
          "dependencies": [
            "aws_vpc.server1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:318451290319:vpc/vpc-03ca51b08e4c298f8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c6709c225c9a237",
            "default_route_table_id": "rtb-0d43adbaa7805a51f",
            "default_security_group_id": "sg-09e12287c58ad3eb1",
            "dhcp_options_id": "dopt-0bfe6763d174bdfd3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03ca51b08e4c298f8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d43adbaa7805a51f",
            "owner_id": "318451290319",
            "tags": {
              "Name": "server1-vpc"
            },
            "tags_all": {
              "Name": "server1-vpc"
            }
          }
        }
      ]
    }
  ]
}